[package]
name = "rusty_lake"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
futures = "0.3"
hyper = "0.14"
matchit = "0.4.4"
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "sync"] }
xjbutil = "0.4.6"

hotwatch = { optional = true, version = "0.4.6" }
pr47 = { optional = true, git = "https://github.com/Pr47/Pr47", features = ["default"] }
rhai = { optional = true, version = "1", features = ["sync"] }

[features]
default = ["dynamic-recompile", "with-pr47", "with-rhai"]

dynamic-recompile = ["hotwatch"]
with-pr47 = ["pr47"]
with-rhai = ["rhai"]
